# Pong

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  LICENSE.txt  README.txt
extlibs/libs-msvc/x64/: sfml-audio.lib  sfml-graphics.lib  sfml-main.lib  sfml-network.lib  sfml-system.lib  sfml-window.lib
extlibs/libs-msvc/x86/: sfml-audio.lib  sfml-graphics.lib  sfml-main.lib  sfml-network.lib  sfml-system.lib  sfml-window.lib
include/TEMM/Entities/: Component.hpp  ComponentPool.hpp  Entity.hpp  ResourceManager.hpp
src/: CMakeLists.txt
src/Pong/: CMakeLists.txt  main.cpp
src/TEMM/: CMakeLists.txt
src/TEMM/Entities/: CMakeLists.txt  Component.cpp  Entity.cpp  ResourceManager.cpp
test/: CMakeLists.txt
test/PongTests/: boost_check.cpp  entity_tests.cpp  manager_test.cpp  sfml_check.cpp
